[package]
name = "lens-rs_test"
version = "0.1.0"
authors = ["oooutlk <oooutlk@outlook.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lens-rs = { path = "../lens-rs", version = "0.0.99" }
lens-rs_derive = { path = "../lens-rs_derive", version = "0.0.6" }

[package.metadata.inwelling]
lens-rs = true
